Make plugin elements return false from canStartSelection.

The canStartSelection property of Node is to indicate that text
selection can start there, i.e. it's some variety of text or editable.
Image and media elements, for example, are excluded.

After I switched long-press selection to consider this property in
r385360, context menu events stopped being forwarded correctly to
plugins because the events were absorbed by text selection instead.  The
root cause was this incorrectly assigned Node property.

For completeness:
- I made the long-press layout tests run on all platforms.  After
  r385360, they were no longer Android-specific, and I only just learned
  of their existence now.

BUG=621063

Review-Url: https://codereview.chromium.org/2078143002
Cr-Commit-Position: refs/heads/master@{#401359}

Former-commit-id: a1c7f43d9e5166bf0b21fc3690728e79bb6fd2a3